<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/not_connected" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="blueToothDevices"
                android:text="@string/blue_label" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="usbDevices"
                android:text="@string/usb_label" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="wifiDevices"
                android:text="@string/ethernet_label" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="serialPortDevices"
                android:text="@string/serial_device" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="disconnect"
                android:text="@string/disconnect"
                android:textColor="@android:color/holo_red_dark" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_58"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="58MM" />

                <RadioButton
                    android:id="@+id/rb_80"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="80MM" />
            </RadioGroup>

            <CheckBox
                android:id="@+id/swState"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/print_state" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="print"
                android:text="@string/print_example" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="printMenu"
                android:text="@string/print_menu" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="printXML"
                android:text="@string/print_xml" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="printPDF"
                android:text="@string/print_pdf" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="printDot"
                android:text="@string/print_needle" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="checkState"
                android:text="@string/check_state" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="centerCrop" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
