<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="35sp"
    android:text="@string/Order"
    android:textColor="@android:color/black"
    android:gravity="center"/>
    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TableLayout
        android:layout_width="match_parent"
        android:stretchColumns="0"
        android:layout_height="wrap_content"
        android:id="@+id/line">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:singleLine="false"
                android:maxEms="3"
                android:textSize="30sp"
                android:textColor="@android:color/black"/>
            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Quantity"
                android:textSize="30sp"
                android:layout_marginEnd="15dp"
                android:textColor="@android:color/black"/>
            <TextView  android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="30sp"
                android:textColor="@android:color/black" />
        </TableRow>
    </TableLayout>
    </ScrollView>
    <View
        android:background="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="2dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/total_amount"
            android:textColor="@android:color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/total"
            android:textSize="30sp"
            android:text=""
            android:textColor="@android:color/black" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/cashier"
            android:textColor="@android:color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:id="@+id/cashier"
            android:text=""
            android:textColor="@android:color/black" />
    </LinearLayout>
</LinearLayout>